--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="/css/animate.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="./img/logo.png">
 </head>
 
 <body>
